Simplify away ad frame naming.
This was causing auto scroll issues with fragment identifiers and
matching ids within the sponsorship ad frame. Since we don't need this
flexibility right now, we've decided to simply remove the support for
custom frame names.

--- a/reddit_adzerk/public/static/createadframe.html
+++ b/reddit_adzerk/public/static/createadframe.html
@@ -1,5 +1,4 @@
 <!doctype html>
 <script>
-  var frameName = location.hash.substr(1)
-  window.parent.parent.r.adzerk.createAdFrame(frameName)
+  window.parent.parent.r.adzerk.createSponsorshipAdFrame()
 </script>
